# launcher

./: .editorconfig  .gitignore  .gitmodules  AGENT.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.claude/commands/: build.md  runapp.md
.claude/skills/add-plugin/: SKILL.md
docs/: features.md  notes.md
docs/features/: calc-plugin.md  file-plugin.md  settings-ui.md  system-tray.md  web-plugin.md
docs/notes/: altspace-reserved-key.md  aqt-mingw-missing-dll.md  cmake-policy-version.md  delegate-itemheight-sync.md  mingw-abi-mismatch.md  mingw-com-ishelllink.md  powershell-cmake-quoting.md  qt-add-executable.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/plugin/: iplugin.h  resultitem.h
src/plugins/: appplugin.cpp  appplugin.h
src/ui/: resultdelegate.cpp  resultdelegate.h
